--- a/popup.html
+++ b/popup.html
@@ -38,7 +38,7 @@
                         browse files
                     </button>
                 </p>
-                <input type="file" id="fileInput" multiple class="hidden">
+                <input type="file" id="fileInput" multiple webkitdirectory class="hidden">
                 <div class="flex flex-wrap items-center gap-2 text-xs text-slate-400">
                     <div class="flex items-center gap-1">
                         <span class="w-1.5 h-1.5 bg-green-400 rounded-full"></span>
@@ -116,14 +116,14 @@
                     <h3 class="text-lg font-bold text-slate-100 mb-1">PDF Created Successfully!</h3>
                     <p class="text-slate-300 mb-4 text-sm">Your files have been merged into a beautiful PDF</p>
                 </div>
-                <div class="flex flex-col gap-2">
-                    <button id="downloadButton" class="bg-gradient-to-r from-success-500 to-green-600 text-white font-semibold py-2 px-4 rounded-lg shadow-lg hover:shadow-xl transform hover:-translate-y-0.5 transition-all duration-200 active:scale-95 inline-flex items-center justify-center gap-2 text-sm">
+                <div class="flex flex-col gap-3">
+                    <button id="downloadButton" class="bg-gradient-to-r from-success-500 to-green-600 text-white font-semibold py-3 px-6 rounded-lg shadow-lg hover:shadow-xl transform hover:-translate-y-0.5 transition-all duration-200 active:scale-95 inline-flex items-center justify-center gap-2 text-sm">
                         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3M3 17V7a2 2 0 012-2h6l2 2h6a2 2 0 012 2v10a2 2 0 01-2 2H5a2 2 0 01-2-2z"/>
                         </svg>
                         Download PDF
                     </button>
-                    <button id="resetButton" class="button-secondary inline-flex items-center justify-center gap-2 text-sm">
+                    <button id="resetButton" class="button-secondary inline-flex items-center justify-center gap-2 text-sm py-2 px-4">
                         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0V9a8 8 0 1115.356 2M15 15v5h-.582"/>
                         </svg>
