\Clarify demo limitations and improve folder filtering
📁 Enhanced Folder Filtering:
- Better handling of directory vs file detection in drag-and-drop
- Separate logic for directory traversal vs file selection
- Improved filtering of parent folder names
- Extended timeout for more reliable file collection (300ms)

💬 Clear Demo Messaging:
- Updated title to 'DEMO: File List Preview'
- Added warning: '⚠️ This is a placeholder - not actual PDF content'
- Explained that full PDF merging requires PDF-lib integration
- Changed success message to 'Demo File Generated!'
- Updated button text to 'Download Preview' (accurate)

🎯 User Expectation Management:
- Now clearly communicates this is a functional demo
- Sets proper expectations about current vs planned functionality
- Maintains beautiful UI while being honest about capabilities
- Explains what's needed for full PDF content merging

Note: This addresses user confusion about getting file lists instead of merged PDF content. The extension demonstrates all UI/UX functionality while clearly indicating PDF-lib integration is needed for actual content processing."

--- a/popup.html
+++ b/popup.html
@@ -113,15 +113,15 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
                         </svg>
                     </div>
-                    <h3 class="text-lg font-bold text-slate-100 mb-1">PDF Created Successfully!</h3>
-                    <p class="text-slate-300 mb-4 text-sm">Your files have been merged into a beautiful PDF</p>
+                    <h3 class="text-lg font-bold text-slate-100 mb-1">Demo File Generated!</h3>
+                    <p class="text-slate-300 mb-4 text-sm">Preview image created (actual PDF merging coming soon)</p>
                 </div>
                 <div class="flex flex-col gap-3">
                     <button id="downloadButton" class="bg-gradient-to-r from-success-500 to-green-600 text-white font-semibold py-3 px-6 rounded-lg shadow-lg hover:shadow-xl transform hover:-translate-y-0.5 transition-all duration-200 active:scale-95 inline-flex items-center justify-center gap-2 text-sm">
                         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3M3 17V7a2 2 0 012-2h6l2 2h6a2 2 0 012 2v10a2 2 0 01-2 2H5a2 2 0 01-2-2z"/>
                         </svg>
-                        Download PDF
+                        Download Preview
                     </button>
                     <button id="resetButton" class="button-secondary inline-flex items-center justify-center gap-2 text-sm py-2 px-4">
                         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
