--- a/popup.html
+++ b/popup.html
@@ -154,6 +154,7 @@
     </div>
 
     <script src="lib/pdf-lib.min.js"></script>
+    <script src="lib/mammoth.browser.min.js"></script>
     <script src="popup.js"></script>
 </body>
 </html>
